<resources>
    <string name="app_name">newTT</string>
    <string name="title_acc">Account</string>
    <string name="title_exam">Exams</string>
    <string name="title_chat">Chat</string>
    <string name="title_task">Tasks</string>
    <string name="title_time">Schedule</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
